The Application is secure now
